exports[`test should merge classes passed in through props 1`] = `
<div
  className="terra-ResponsiveElement TestClass" />
`;

exports[`test should render a default component 1`] = `
<div
  className="terra-ResponsiveElement" />
`;
